# FM-Agent

./: .env.example  .gitignore  README.md  README_zh.md  config.py  dashboard.py  install.sh  main.py  pyproject.toml
docs/: config_llm.md  verification_failure_notes.md
md/: workflow_setup_extract.md
src/: entry_reasoning_pipeline.py  extract.py  generate_topdown_layers.py  incremental_reasoner.py  llm_client.py  opencode_trace.py  prompts.py  reasoner.py  scope.py  trace_writer.py  verification.py
src/extractors/: codegraph.py
src/languages/: codegraph.py  python.py  registry.py
