[project]
name = "fm-agent"
version = "0.1.0"
description = "Scaling formal methods to large systems via LLM-based Hoare-style reasoning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==2.15.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "litellm>=1.50.0",
]

[project.scripts]
fm-agent = "main:main"

[tool.uv]
package = false
